re PR c/77767 (Side-effect from VLA array parameters lost)

PR c/77767
	* c-decl.c (grokdeclarator): If *expr is non-NULL, append expression
	to *expr instead of overwriting it.

	* gcc.c-torture/execute/pr77767.c: New test.

From-SVN: r243851